# pixelification

./: Cargo.toml  LICENSE  README.md  aster-browser-todo.md  main.py  pyproject.toml  rearrange_pixels.py  rearrange_pixels_tui.py  requirements.txt  vecteezy_youtube-logo-png-youtube-icon-transparent_18930572_ascii.txt
.github/workflows/: publish.yml
src/: main.rs  win32.rs
src/app/: mod.rs
src/events/: mod.rs
src/pixelification/: main.py  runtime.py
src/state/: mod.rs
src/ui/: animated.rs  bitmap.rs  brush.rs  color.rs  font.rs  mod.rs  render.rs
src/webview/: mod.rs
