[project]
name = "pixelification"
dynamic = ["version"]
description = "Pixel Rearrangement Tool — Keyboard-Navigated Terminal UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0.0",
    "opencv-python>=4.0.0",
    "numpy>=1.20.0",
    "cupy-cuda12x>=12.0.0",
]

[project.scripts]
pixelification = "pixelification.main:main"

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
