[project]
name = "pixelification"
dynamic = ["version"]
description = "Pixel Rearrangement Tool — Keyboard-Navigated Terminal UI"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "prompt-toolkit>=3.0.0",
    "opencv-python>=4.0.0",
    "numpy>=1.20.0",

    # NVIDIA CUDA backend
    "cupy-cuda12x>=14.1.0; sys_platform == 'linux' or sys_platform == 'win32'",

    # Apple Silicon backend
    "mlx>=0.10.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
pixelification = "pixelification.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"