[project]
name = "pixelification"
dynamic = ["version"]
description = "Pixel Rearrangement Tool — Keyboard-Navigated Terminal UI"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "prompt-toolkit>=3.0.0",
    "opencv-python>=4.0.0",
    "numpy>=1.20.0",

    # NVIDIA CUDA backend
    "cupy-cuda13x[ctk]; sys_platform == 'linux' or sys_platform == 'win32'",
]

[project.scripts]
pixelification = "pixelification.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
